functionality complete, minimal design

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h4 id="question">Asks a Question</h4>
+                    <h4 id="question"></h4>
 
                     <h2 id="correctAnswer" class="flex-column"></h2>
 
