--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="row d-flex justify-content-between">
-            <div class="col-lg-4 timer">
+            <div class="col-4 offset-4 timer ">
 
 
             </div>
