Edited ReadMe, including gifs and screenshots

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-
+<!-- main game container -->
     <div class="container d-flex flex-column card p-5">
         <div class="row d-flex justify-content-around pb-2" id="heading">
             <h1>Game of Thrones Trivia</h1>
@@ -26,7 +26,7 @@
 
         <div class="row d-flex justify-content-around">
             <div id="startRow">
-                <!-- <button type='button' class='btn btn-light' id='start'>Start Game</button> -->
+              
             </div>
         </div>
 
@@ -75,7 +75,7 @@
     </div>
 
 
-    <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
